--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <h1>Welcome to user registration</h1>
   <style>
+  body{
+    background-image: url('/static/img/background.jpg');
+  }
     .block {
       display: block;
       width: 50%;
