--- a/static/abonement.html
+++ b/static/abonement.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h2>Abonement</h2>
+<h2>Warning</h2>
+<style>
+    body{
+        background-image: url('/img/background.jpg');
+    }
+    </style>
 
-<p>Here it will be possible to add/remove/modify the abonements</p>
+<p>Page under construction</p>
 
 <img src="/img/abonement.jpeg" alt="abonement image" width="460" height="345">
 
