--- a/static/classes.html
+++ b/static/classes.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body{
+            background-image: url('/img/background.jpg');
+        }
+        </style>
+
 <body>
 
-<h2>Classes</h2>
+<h2>Warning</h2>
 
-<p>Here it will be possible to add/remove/modify the classes</p>
+<p>Page under construction</p>
 
 <img src="/img/salsa.jpg" alt="salsa image" width="460" height="345">
 
