--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Welcome to user registration</h1>
   <style>
   body{
-    background-image: url('/static/img/background.jpg');
+    background-image: url('/img/background.jpg');
   }
     .block {
       display: block;
@@ -35,7 +35,7 @@
   <br>
   <a href="/classes.html" class="block"><b>CLASSES</b></a>
   <br>
-  <a href="/abonement.html" class="block"><b>ABONEMENT</b></a>
+  <a href="/abonement.html" class="block"><b>ABONNEMENT</b></a>
   <br>
 </form>
 
