adding more user fields

--- a/static/users.html
+++ b/static/users.html
@@ -24,8 +24,8 @@ body{
         <label for="gender">Gender:</label>
         <input type="text" name="gender" id="gender" required><br><br>
 
-        <label for="name">Comments:</label>
-        <input type="text" name="name" id="name" required><br><br>
+        <label for="comments">Comments:</label>
+        <input type="text" name="comments" id="comments" required><br><br>
 
         <button type="submit">Submit</button>
     </form>
