--- a/static/users.html
+++ b/static/users.html
@@ -25,11 +25,13 @@ body{
         <input type="text" name="gender" id="gender" required><br><br>
 
         <label for="comments">Comments:</label>
-        <input type="text" name="comments" id="comments" required><br><br>
+        <textarea name="comments" id="comments" required></textarea><br><br>
 
         <button type="submit">Submit</button>
     </form>
+
     <div id="message"></div>
+    
     <script src="/script.js"></script>
 
 </html>   
