--- a/static/users.html
+++ b/static/users.html
@@ -25,7 +25,7 @@ body{
         <input type="text" name="gender" id="gender" required><br><br>
 
         <label for="comments">Comments:</label>
-        <textarea name="comments" id="comments" required></textarea><br><br>
+        <input type="text" name="comments" id="comments" required><br><br>
 
         <button type="submit">Submit</button>
     </form>
