--- a/static/users.html
+++ b/static/users.html
@@ -12,7 +12,7 @@ body {
 
 <h1>User Data Entry</h1>
 <form id="dataForm">
-    <label for="name">Name:</label>
+    <label for="name">Prenom:</label>
     <input type="text" name="name" id="name" required><br><br>
 
     <label for="surname">Surame:</label>
