--- a/static/users.html
+++ b/static/users.html
@@ -16,7 +16,7 @@ body {
     <input type="text" name="name" id="name" required><br><br>
 
     <label for="age">Age:</label>
-    <input type="number" name="age" id="age" required><br><br>
+    <input type="text" name="age" id="age" required><br><br>
 
     <button type="submit">Submit</button>
 </form>
