--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       text-align: center;
     }
   </style>
-  <form id="dataForm">
+  <form id="index">
   <!-- <a href="/static/users.html"><button class="block">USERS</button></a>
   <br>
   <a href="/static/classes.html"><button class="block"><b>CLASSES</b></button></a>
