--- a/static/users.html
+++ b/static/users.html
@@ -34,7 +34,7 @@ document.addEventListener("DOMContentLoaded", function () {
         const data = {
             name: formData.get("name"),
             //surname: formData.get("surname"),
-            age: formData.get("age")
+            age: formData.get("age"),
             //gender: formData.get("gender"),
             //comments: formData.get("comments")
         };
