--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Welcome to user registration</h1>
+  <h1>Welcome to users registrations</h1>
   <style>
   body{
     background-image: url('/img/background.jpg');
